# 3_IntermediateProject

./: CMakeLists.txt
app/: main.cpp
config/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt  my_lib.cpp
